--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "express-handlebars": "^5.1.0"
+    "express-handlebars": "^5.1.0",
+    "firebase": "^7.19.1",
+    "firebase-admin": "^9.1.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
